# api_client

./: .gitignore  README.md  pyproject.toml
src/api_client/: __init__.py  api_client.py
src/ml_api_client/: api_client.py  models.py
src/ml_api_client/endpoints/: __init__.py  auth.py  chat.py  models.py  rag.py  vector_db.py  vector_stores.py
tests/: conftest.py  test_auth.py  test_chat.py  test_embeddings.py  test_models.py  test_rag.py  test_vector_db.py
