[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api_client"
version = "0.1.0"
description = "A Python client for interacting with Mathis LAMBERT's API"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["api", "client", "mathis lambert"]
license = { text = "MIT" }
authors = [
    { name = "Mathis LAMBERT", email = "mathislambert.dev@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.11.12",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
]

[project.urls]
"Homepage" = "https://github.com/mathis-lambert/api_client"
"Bug Tracker" = "https://github.com/mathis-lambert/api_client/issues"

[tool.setuptools]
packages = ["api_client"]

[tool.setuptools.package-data]
"api_client" = ["py.typed"]
